--- a/Resources/DesktopModules/HTML/App_LocalResources/Workflow.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/HTML/App_LocalResources/Workflow.ascx.nl-NL.resx
@@ -44,7 +44,7 @@
             &lt;li&gt;&lt;strong&gt;Basic Text Box / HTML &lt;/strong&gt;: Geeft platte tekst in html formaat weer.&lt;/li&gt;
             &lt;li&gt;&lt;strong&gt;Basic Text Box / Raw &lt;/strong&gt;: Geeft platte tekst in HTML-formaat. Tekst
                 op een nieuwe regel wordt niet weergegeven als een regeleinde.&lt;/li&gt;
-            &lt;li&gt;&lt;strong&gt;Rich Text Editor / HTML &lt;/strong&gt;: Hiermee kunt u HTML plakken uit andere
+            &lt;li&gt;&lt;strong&gt;Rich Text Editor / HTML &lt;/strong&gt;: Hiermee kun je HTML plakken uit andere
                 bronnen.&lt;/li&gt;
             &lt;li&gt;&lt;strong&gt;Rich Text Editor / Design &lt;/strong&gt;: Een volledige tekstverwerker ofwel
                 een WYSIWYG (What You See is What You Get) editor met functies zoals hyperlinks,
