--- a/Resources/DesktopModules/SocialGroups/App_LocalResources/SharedResources.nl-NL.resx
+++ b/Resources/DesktopModules/SocialGroups/App_LocalResources/SharedResources.nl-NL.resx
@@ -216,6 +216,6 @@
     <value>Setup sociale groepen</value>
   </data>
   <data name="SetupIntro.Text" xml:space="preserve">
-    <value>De sociale groepen module stelt gebruikers in staat om door groepen te bladeren, te bekijken en te maken.  De beste manier om de module configureren is het creëren van een pagina voor het bladern door de groepen en een andere pagina voor het weergeven van groepsdetails.  Je kan de module zelf configureren, of u kunt op "Auto configuratie" knop hieronder klikken.  &lt;br /&gt; &lt;br /&gt; &lt;b&gt;We raden aan de optie "Auto configuratie" te gebruiken als je niet bekend bent met de module.&lt;/b&gt;</value>
+    <value>De sociale groepen module stelt gebruikers in staat om door groepen te bladeren, te bekijken en te maken.  De beste manier om de module configureren is het creëren van een pagina voor het bladern door de groepen en een andere pagina voor het weergeven van groepsdetails.  Je kan de module zelf configureren, of je kunt op "Auto configuratie" knop hieronder klikken.  &lt;br /&gt; &lt;br /&gt; &lt;b&gt;We raden aan de optie "Auto configuratie" te gebruiken als je niet bekend bent met de module.&lt;/b&gt;</value>
   </data>
 </root>
