--- a/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
@@ -25,7 +25,7 @@
     <value>Wijzig wachtwoord</value>
   </data>
   <data name="Confirm.Required" xml:space="preserve">
-    <value>U moet een bevestigingswachtwoord invullen</value>
+    <value>Je moet een bevestigingswachtwoord invullen</value>
   </data>
   <data name="Confirm.Text" xml:space="preserve">
     <value>Bevestig het wachtwoord</value>
@@ -34,7 +34,7 @@
     <value>Wachtwoord herstellen</value>
   </data>
   <data name="Email.Required" xml:space="preserve">
-    <value>U dient een e-mailadres in te voeren</value>
+    <value>Je dient een e-mailadres in te voeren</value>
   </data>
   <data name="Email.Text" xml:space="preserve">
     <value>E-mailadres</value>
