--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Security/App_LocalResources/security.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Security/App_LocalResources/security.nl-NL.resx
@@ -64,7 +64,7 @@
     <value>Annuleren</value>
   </data>
   <data name="CannotDelete.Text" xml:space="preserve">
-    <value>U kunt deze rol niet verwijderen, omdat deze actie het huidige IP adres zal buitensluiten.</value>
+    <value>Je kunt deze rol niet verwijderen, omdat deze actie het huidige IP adres zal buitensluiten.</value>
   </data>
   <data name="Check.Text" xml:space="preserve">
     <value>[ Check ]</value>
@@ -286,7 +286,7 @@
     <value>Zoeken</value>
   </data>
   <data name="ContainsDuplicateAddresses.Text" xml:space="preserve">
-    <value>De gebruiker basis van deze site bevat dubbele e-mailadressen. Als u het e-mailadres wilt gebruiken als gebruikersnaam dienen eerste de e-mailadressen te worden ontdubbelt.</value>
+    <value>De gebruiker basis van deze site bevat dubbele e-mailadressen. Als je het e-mailadres wilt gebruiken als gebruikersnaam dienen eerste de e-mailadressen te worden ontdubbelt.</value>
   </data>
   <data name="CreatedDate.Header" xml:space="preserve">
     <value>Aanmaakdatum</value>
@@ -304,7 +304,7 @@
     <value>WAARDE</value>
   </data>
   <data name="DefaultAuthProvider.Help" xml:space="preserve">
-    <value>U kunt de standaard authenticatie prodiver selecteren voor de gebruikerslogin. Alleen providers die forms authenticatie ondersteunen kunnen worden geselecteerd.</value>
+    <value>Je kunt de standaard authenticatie prodiver selecteren voor de gebruikerslogin. Alleen providers die forms authenticatie ondersteunen kunnen worden geselecteerd.</value>
   </data>
   <data name="DefaultAuthProvider.Text" xml:space="preserve">
     <value>Standaard authenticatie provider</value>
@@ -379,7 +379,7 @@
     <value>IP-filter</value>
   </data>
   <data name="IpFilterDeletedWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u dit IP filter wilt verwijderen?</value>
+    <value>Weet je zeker dat je dit IP filter wilt verwijderen?</value>
   </data>
   <data name="IPFiltersDisabled.Text" xml:space="preserve">
     <value>Login IP filtering is momenteel uitgeschakeld. selecteer IP adres controle onder leden accounts om deze te activeren</value>
@@ -418,7 +418,7 @@
     <value>LAATST AANGEPAST DATUM</value>
   </data>
   <data name="LoginSettingsRestoreWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u de aanpassingen wilt annuleren?</value>
+    <value>Weet je zeker dat je de aanpassingen wilt annuleren?</value>
   </data>
   <data name="LowRiskFiles.Text" xml:space="preserve">
     <value>Laag risico bestanden</value>
@@ -436,7 +436,7 @@
     <value>Kan leden instellingen niet bijwerken. Probeer het later opnieuw.</value>
   </data>
   <data name="MemberSettingsRestoreWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u de aanpassingen wilt annuleren?</value>
+    <value>Weet je zeker dat je de aanpassingen wilt annuleren?</value>
   </data>
   <data name="MemberSettingsUpdateSuccess.Text" xml:space="preserve">
     <value>De leden instellingen zijn opgeslagen.</value>
@@ -487,7 +487,7 @@
     <value>Zoekterm is niet gevonden in de database</value>
   </data>
   <data name="NoDisplayName.Text" xml:space="preserve">
-    <value>U heeft de vereis unieke weergavenaam optie geselecteerd maar u heeft niet het weergavenaam veld in de lijst van velden opgenomen.</value>
+    <value>Je hebt de vereis unieke weergavenaam optie geselecteerd maar je hebt niet het weergavenaam veld in de lijst van velden opgenomen.</value>
   </data>
   <data name="NoEmail.Text" xml:space="preserve">
     <value>Het " e-mail" veld, moet minimaal zijn ingesloten.</value>
@@ -511,7 +511,7 @@
     <value>Kan instellingen niet bijwerken. Probeer het later opnieuw.</value>
   </data>
   <data name="OtherSettingsRestoreWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u de aanpassingen wilt annuleren?</value>
+    <value>Weet je zeker dat je de aanpassingen wilt annuleren?</value>
   </data>
   <data name="OtherSettingsUpdateSuccess.Text" xml:space="preserve">
     <value>Instellingen zijn bijgewerkt.</value>
@@ -838,7 +838,7 @@
     <value>Kan de registratie instellingen niet wijzigen. Probeer het later opnieuw.</value>
   </data>
   <data name="RegistrationSettingsRestoreWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u de instellingen wilt annuleren?</value>
+    <value>Weet je zeker dat je de instellingen wilt annuleren?</value>
   </data>
   <data name="RegistrationSettingsUpdateSuccess.Text" xml:space="preserve">
     <value>De registratie instellingen zijn gewijzigt.</value>
@@ -964,7 +964,7 @@
     <value>Kan SSL instellingen niet bijwerken. Probeer het later opnieuw.</value>
   </data>
   <data name="SslSettingsRestoreWarning.Text" xml:space="preserve">
-    <value>Weet u zeker dat u de instellingen wilt annuleren?</value>
+    <value>Weet je zeker dat je de instellingen wilt annuleren?</value>
   </data>
   <data name="SslSettingsUpdateSuccess.Text" xml:space="preserve">
     <value>De SSL instellingen zijn bijgewerkt</value>
